# nous

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LOOP.md  README.md  README.zh.md  REPRODUCIBILITY.md  SHARED-CONTEXT.md  config.yaml  llms.txt  pyproject.toml
benchmarks/: biomorphic_longmemeval.py  bootstrap-mac.sh
dashboard/: api.py  index.html  live.html
data/: eval_v3_results.json  external_baselines_results.json  owner_harm_heldout.json  owner_harm_heldout_v2.json  owner_harm_heldout_v3.json
docs/: 40-rule-reference-set-protocol.md  AUTO_RESEARCH_V2.md  NOUS_LAB_V1.md  TEAM_BOOTSTRAP_PLAN.md  ablation-results.json  ablation-train.json  ablation-val.json  academic-positioning-20260313.md  action-layer-research.md  adversarial-results-v1.json  agentharm-baseline-2026-03-13.md  agentharm-corrected.json  agentharm-owner-centric-relabel.json  agentharm-raw-scenarios.json  agentharm-threelayer-2026-03-13.json  agentharm-threelayer-v2.json  audit-intent-decomposition-2026-03-18.md  audit-kimi-20260313.md  audit-opus-20260313.md  automation-pipeline-design.md  avo-reference-20260328.md  capability-measurement-design.md  capability-results.json  ccbos-model-comparison.json  ccbos-results.json  challenge-fn-analysis.md  challenge-results.json  confidence-intervals.json  cozo-lark-fork-decision.md  crai-2026-outline.md  crai-citation-audit.md  crai-math-derivation.md  crai-math-paper-section.md  crai-section1-draft.md  crai-section2-draft.md  crai-section3-draft.md  crai-section4-draft.md  crai-section5-draft.md  critique-gpt54-20260315.md  design-kg-integration.md  (+162 more)
(+549 files in other folders)
